--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,13 +1,12 @@
 .footer {
   width: 100%;
-  height: 200px;
-  background: purple;
+  height: 100px;
+  background: #9065e5;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   padding-top: 10px;
-  margin-top: 200px;
 }
 
 .socialMedia svg {
