--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,7 +2,7 @@
   width: 100%;
   align-items: center;
   font-family: "Arial", sans-serif;
-  color: purple;
+  color: #a071ff;
 }
 
 .about {
@@ -13,14 +13,14 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-color: purple;
-  color: #f0f0f0;
+  background-color: #a071ff;
+  color: #ecf0f1;
 }
 
 .about h2 {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 80px;
-  color: #e9d35b;
+  color: #ffc44d;
   height: 50px;
 }
 
@@ -28,10 +28,11 @@
   width: 40%;
   font-size: 30px;
 }
+
 .prompt svg {
   font-size: 60px;
   margin: 5px;
-  color: white;
+  color: #ecf0f1;
 }
 
 .skills {
@@ -43,17 +44,60 @@
   align-items: center;
 }
 
-.skills h1 {
-  color: purple;
-}
-
 .skills .list {
   list-style: none;
-  width: 60%;
+  width: 100%;
+  margin: auto;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .list span {
   font-size: 20px;
+}
+
+.button-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button {
+  display: block;
+  outline: none;
+  border: none;
+  padding: 10px;
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+}
+
+.button:hover {
+  background: #b38dff;
+  transition: all 0.5s;
+}
+
+.skills-header {
+  width: 100%;
+  height: 100px;
+  background: #9065e5;
+  color: white;
+  margin: 0;
+  text-align: center;
+  padding-top: 20px;
+}
+
+.skill-title {
+  text-align: center;
+}
+
+.skill-list {
+  background: #b38dff;
+  color: white;
+  padding: 50px;
+  border-radius: 20px;
 }
 
 @media only screen and (max-width: 600px) {
