--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
   width: 100%;
   height: 100px;
-  background: purple;
+  background: #9065e5;
 }
 
 .links {
@@ -12,11 +12,21 @@
   justify-content: center;
   color: white;
 }
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0 20px;
+}
+.link:hover {
+  background: #b38dff;
+  transition: all 0.5s;
+}
 
 .navbar a {
   color: white;
   text-decoration: none;
-  margin: 20px;
   font-size: 25px;
 }
 
