--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -18,6 +18,10 @@
   justify-content: center;
   height: 100%;
   padding: 0 20px;
+  width: 150px;
+}
+.active {
+  background: #b38dff;
 }
 .link:hover {
   background: #b38dff;
