--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -42,7 +42,7 @@
   border-top-right-radius: 15px;
   width: 100%;
   height: 200px;
-  background-position: center;
+  background-position: left;
   background-repeat: no-repeat;
   background-size: cover;
 }
