--- a/src/styles/ProjectDisplay.css
+++ b/src/styles/ProjectDisplay.css
@@ -1,6 +1,5 @@
 .project {
   width: 100%;
-  height: calc(100vh - 100px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,8 +11,11 @@
   color: purple;
   font-size: 35px;
 }
-.project img {
+.project a,
+img {
+  position: relative;
   width: 700px;
+  height: 250px;
   border-radius: 10px;
 }
 
@@ -44,4 +46,23 @@
 }
 .project .skill-icon {
   margin-right: 10px;
+}
+.visit {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background: #333;
+  opacity: 0.6;
+  top: 0;
+  font-size: 72px;
+  color: white;
+  outline: none;
+  border-radius: 10px;
+}
+.visit:hover {
+  trasition: all 0.5s;
+  font-size: 100px;
 }
